--- a/admin/view/Public/leftmenu.html
+++ b/admin/view/Public/leftmenu.html
@@ -9,7 +9,7 @@
                         <li class="nav-header">Main</li>
                         <li><a class="ajax-link" href="index.php?m=admin&c=friendlink&a=index"><i class="glyphicon glyphicon-home"></i><span> 友情链接</span></a>
                         </li>
-                        <li><a class="ajax-link" href="ui.html"><i class="glyphicon glyphicon-eye-open"></i><span> UI Features</span></a>
+                        <li><a class="ajax-link" href="index.php?m=admin&c=server&a=index"><i class="glyphicon glyphicon-eye-open"></i><span> 服务功能</span></a>
                         </li>
                         <li><a class="ajax-link" href="form.html"><i
                                     class="glyphicon glyphicon-edit"></i><span> Forms</span></a></li>
